--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         This game features a variety of fetish content that is not suitable for those under the age of 18. </br>
         If you are under the age of 18, click away immediately.
        </p>
-      <input type="checkbox" id="18plus" name="18plus" onchange="document.getElementById('startGameButton').disabled = !this.checked; document.getElementById('startGameButton').classList.toggle('disabledButton');">
+      <input autocomplete="off" type="checkbox" id="18plus" name="18plus" onchange="document.getElementById('startGameButton').disabled = !this.checked; document.getElementById('startGameButton').classList.toggle('disabledButton');">
       <label style="color: white" for="18plus">I am at least 18 years old</label>
     </div>
     <br>
