--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 <div id="LoadingScreenOverlay" class="overlayPreload">
   <div class="startGame" style="margin-bottom:10px">
+    <div class="loader">
+      <div class="loaderBar"></div>
+    </div>
     <span style="font-size: 100px;">Loading...</span>
-    <span id="currentPreloadingImage" style="font-size: 25px;"></span>
-  </div>
-  <div class="progress" id="myProgress">
-    <div id="preloadLoadingBar"></div>
+    <span id="currentPreloadingImage" style="font-size: 25px;">This may take a minute the first time you load</span>
   </div>
 </div>
 
